--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Red+Hat+Text&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap"
             rel="stylesheet"
         />
         <link rel="stylesheet" href="/static/styles.css" />
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div class="app-header">
-            <h1>UniGoTo</h1>
+            <h1 class="app-header_text">UniGoTo – Команда Cobra Kai</h1>
         </div>
         <main class="app-container">
             <div class="content">
@@ -49,8 +49,7 @@
                     <h2>Результаты</h2>
                     <p id="results__info"></p>
                     <p id="results__error"></p>
-                    <ul id="results_list">
-                    </ul>
+                    <ol id="results_list"></ol>
                 </section>
             </div>
         </main>
